# Chat

./: Contribute.md  README.md  flatpak-manifest.json  main.py  meson.build  org.vegeta.Chat.json  org.vegeta.Chat.metainfo.xml
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/org.vegeta.Chat/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-flatpak-manifest.json/: build-chat  build-webkit2gtk  cleanup  finish  init
.flatpak-builder/cache/summaries/: 4ef0ba5aeea53df8ad4a63c23f1195001b8d710e979f31771ab5d926b57eca51-88a328c4c68f70cd83f04579305fc7daab81d69f1d1092fd5f28e24564ca52ed.delta  dbb7fae6787edfc874fe155570c92a4dbd4c9dac7158fbac775d83821f416b94-88a328c4c68f70cd83f04579305fc7daab81d69f1d1092fd5f28e24564ca52ed.delta  e8021d339bdfb36e1a10a523b186ff3b4bfe36df03cf5e949784ed2cc96c0007-88a328c4c68f70cd83f04579305fc7daab81d69f1d1092fd5f28e24564ca52ed.delta  f5d8e2456e3a80b0d253a41e697f69aca12abc1a26028b77ca6948da2b3f9d88-88a328c4c68f70cd83f04579305fc7daab81d69f1d1092fd5f28e24564ca52ed.delta
.flatpak-builder/checksums/: x86_64-flatpak-manifest.json
data/: meson.build  org.vegeta.Chat.desktop.in  org.vegeta.Chat.gschema.xml  org.vegeta.Chat.metainfo.xml.in  org.vegeta.Chat.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
repo/refs/heads/app/org.vegeta.Chat/x86_64/: org.vegeta.Chat
src/: chat.gresource.xml  meson.build
